First changes for the FO theme

--- a/css/global.pages.css
+++ b/css/global.pages.css
@@ -2,25 +2,31 @@
  * @file
  * Page Styling
  */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/global\.pages\.scss}line{font-family:\0000327}}
 #page * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/global\.pages\.scss}line{font-family:\0000338}}
 #columns {
   margin-bottom: 25px;
 }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/global\.pages\.scss}line{font-family:\0000364}}
 #branding {
   float: left;
   padding: 0;
+  width: 100%;
 }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/global\.pages\.scss}line{font-family:\0000374}}
 #logo {
   float: left;
   padding: 10px 15px 10px 0;
 }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/global\.pages\.scss}line{font-family:\0000378}}
 #logo img {
   vertical-align: bottom;
 }
@@ -28,53 +34,70 @@
 /*#name-and-slogan {
   float: left;
   margin-top: 3em;
+  width: 100%;
 }*/
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/global\.pages\.scss}line{font-family:\0000393}}
 #site-name a {
-  font-family: steelfish;
   color: #414042;
-  font-weight: 400;
+  font-weight: 700;
   letter-spacing: 0;
 }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/global\.pages\.scss}line{font-family:\00003102}}
 #site-name a:link, #site-name a:visited {
   text-decoration: none;
 }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/global\.pages\.scss}line{font-family:\00003107}}
 #site-name a:hover, #site-name a:focus {
   text-decoration: underline;
 }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/global\.pages\.scss}line{font-family:\00003114}}
+#site-slogan {
+  float: right;
+  margin-right: 0.83em;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/global\.pages\.scss}line{font-family:\00003120}}
 .region-header {
   float: right;
 }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/global\.pages\.scss}line{font-family:\00003141}}
 ul.links {
   margin: 0;
   padding: 0;
 }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/global\.pages\.scss}line{font-family:\00003145}}
 ul.links.inline {
   display: block;
 }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/global\.pages\.scss}line{font-family:\00003149}}
 ul.links li {
   display: inline;
   list-style: none;
   padding: 0 10px 0 0;
 }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/global\.pages\.scss}line{font-family:\00003158}}
 #aggregator .feed-source .feed-icon {
   display: inline;
   float: none;
   margin-right: 10px;
 }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/global\.pages\.scss}line{font-family:\00003165}}
 .feed-details dt,
 .feed-details dd {
   display: inline;
   margin: 0;
 }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/global\.pages\.scss}line{font-family:\00003172}}
 .search-results {
   margin: 0;
 }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/global\.pages\.scss}line{font-family:\00003204}}
 .block-inner,
 .pane-inner,
 div.messages,
@@ -89,11 +112,13 @@ div.messages,
   margin-right: 10px;
 }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/global\.pages\.scss}line{font-family:\00003210}}
 .page-panels #content {
   margin-left: -10px;
   margin-right: -10px;
 }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/global\.pages\.scss}line{font-family:\00003245}}
 .region-sidebar-first {
   border-top: 6px solid #FFC344;
   border-right: 1px solid #FFC344;
@@ -102,6 +127,7 @@ div.messages,
   background-color: #FFF6DC;
 }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/global\.pages\.scss}line{font-family:\00003330}}
 #footer-wrapper {
   background-color: #000000;
   border-top: 1px solid #4A4E50;
@@ -111,28 +137,35 @@ div.messages,
   text-align: center;
 }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/global\.pages\.scss}line{font-family:\00003340}}
 #footer-panels-wrapper {
   background-color: #3B3B3C;
   margin-bottom: 0;
   color: #fff;
   padding: 25px 0 10px;
 }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/global\.pages\.scss}line{font-family:\00003345}}
 #footer-panels-wrapper div.block-content.content {
   margin-left: 120px;
 }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/global\.pages\.scss}line{font-family:\00003347}}
 #footer-panels-wrapper div.block-content.content a {
   color: #fff;
 }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/global\.pages\.scss}line{font-family:\00003349}}
 #footer-panels-wrapper div.block-content.content a:hover {
   text-decoration: underline;
 }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/global\.pages\.scss}line{font-family:\00003352}}
 #footer-panels-wrapper div.block-content.content a img {
   margin-left: 10px;
   margin-top: 5px;
 }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/global\.pages\.scss}line{font-family:\00003357}}
 #footer-panels-wrapper div.block-content.content p {
   padding-left: .5em;
 }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/global\.pages\.scss}line{font-family:\00003360}}
 #footer-panels-wrapper div.block-content.content ul li {
   background-color: #464E55;
   text-align: center;
@@ -144,19 +177,24 @@ div.messages,
   font-weight: bold;
   position: relative;
 }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/global\.pages\.scss}line{font-family:\00003370}}
 #footer-panels-wrapper div.block-content.content ul li.active {
   background-color: #FFC344;
 }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/global\.pages\.scss}line{font-family:\00003372}}
 #footer-panels-wrapper div.block-content.content ul li.active a {
   color: #000;
 }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/global\.pages\.scss}line{font-family:\00003376}}
 #footer-panels-wrapper div.block-content.content ul li a {
   display: block;
   padding-top: 12px;
 }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/global\.pages\.scss}line{font-family:\00003379}}
 #footer-panels-wrapper div.block-content.content ul li a:hover {
   text-decoration: none;
 }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/global\.pages\.scss}line{font-family:\00003385}}
 #footer-panels-wrapper h2.block-title {
   color: #fff;
   float: left;
@@ -165,14 +203,17 @@ div.messages,
   text-transform: uppercase;
 }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/global\.pages\.scss}line{font-family:\00003400}}
 div.messages {
   margin: 1.5em 0;
 }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/global\.pages\.scss}line{font-family:\00003403}}
 div.messages ul {
   margin-top: 0;
   margin-bottom: 0;
 }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/global\.pages\.scss}line{font-family:\00003442}}
 .node-unpublished p.unpublished,
 .comment-unpublished p.unpublished {
   color: #fff;
@@ -190,21 +231,25 @@ div.messages ul {
   word-wrap: break-word;
 }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/global\.pages\.scss}line{font-family:\00003463}}
 .lt-ie8 .node-unpublished > *,
 .lt-ie8 .comment-unpublished > * {
   position: relative;
 }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/global\.pages\.scss}line{font-family:\00003473}}
 .dev-query {
   background: #eee;
   padding: 30px;
 }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/global\.pages\.scss}line{font-family:\00003481}}
 h2 a, h3 a, h4 a, h5 a, h6 a {
   color: #000;
   text-decoration: underline;
 }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/global\.pages\.scss}line{font-family:\00003489}}
 .tooltip {
   display: none;
   background: transparent url(../images/black_arrow.png);
@@ -215,6 +260,7 @@ h2 a, h3 a, h4 a, h5 a, h6 a {
   color: #fff;
 }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/global\.pages\.scss}line{font-family:\00003499}}
 .flexslider {
   background: #EBEBEB;
   /* Old browsers */
@@ -222,9 +268,9 @@ h2 a, h3 a, h4 a, h5 a, h6 a {
   background: -webkit-linear-gradient(top, #ebebeb, #d1d1d1);
   background: -moz-linear-gradient(top, #ebebeb, #d1d1d1);
   background: -o-linear-gradient(top, #ebebeb, #d1d1d1);
-  background: -ms-linear-gradient(top, #ebebeb, #d1d1d1);
   background: linear-gradient(top, #ebebeb, #d1d1d1);
 }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/global\.pages\.scss}line{font-family:\00003502}}
 .flexslider h2 {
   padding-top: 10px;
   padding-left: 10px;
@@ -232,23 +278,28 @@ h2 a, h3 a, h4 a, h5 a, h6 a {
   font-weight: 100;
   text-shadow: 0 1px 0 rgba(255, 255, 255, 0.6);
 }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/global\.pages\.scss}line{font-family:\00003508}}
 .flexslider h2 a {
   color: #086782;
   text-decoration: none;
 }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/global\.pages\.scss}line{font-family:\00003511}}
 .flexslider h2 a:hover {
   color: #3B3B3C;
 }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/global\.pages\.scss}line{font-family:\00003516}}
 .flexslider .views-field-body {
   padding-left: 10px;
   padding-right: 10px;
 }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/global\.pages\.scss}line{font-family:\00003522}}
 div.flex-pauseplay {
   position: absolute;
   bottom: 10px;
   right: 10px;
 }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/global\.pages\.scss}line{font-family:\00003526}}
 div.flex-pauseplay .flex-play {
   cursor: pointer;
 }
