--- a/css/responsive.desktop.css
+++ b/css/responsive.desktop.css
@@ -11,16 +11,20 @@
  *
  * - Read the _README file in this directory, it contains useful help and other information.
  */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/responsive\.desktop\.scss}line{font-family:\0000320}}
 #name-and-slogan {
   float: left;
   margin-bottom: 10px;
   margin-top: 30px;
+  width: 100%;
 }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/responsive\.desktop\.scss}line{font-family:\0000327}}
 #main-content {
   margin-left: 40px;
 }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/responsive\.desktop\.scss}line{font-family:\0000331}}
 #research-depts-nav {
   background: #3B3B3C;
   padding: 5px;
@@ -28,12 +32,26 @@
   overflow: auto;
   width: 100%;
 }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/responsive\.desktop\.scss}line{font-family:\0000337}}
 #research-depts-nav a {
-  color: #FFC344;
+  color: #F1F1F1;
   font-size: 0.8em;
   font-weight: bold;
   vertical-align: middle;
 }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/responsive\.desktop\.scss}line{font-family:\0000344}}
+#research-depts-nav a:hover, #research-depts-nav a:focus {
+  color: #FFF;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/responsive\.desktop\.scss}line{font-family:\0000349}}
+#research-depts-nav li {
+  border-right: 1px solid #FFF;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/responsive\.desktop\.scss}line{font-family:\0000352}}
+#research-depts-nav li.last {
+  border-right: none;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/responsive\.desktop\.scss}line{font-family:\0000355}}
 #research-depts-nav #current-department-link {
   float: left;
   background-color: #FFC344;
@@ -47,6 +65,7 @@
   margin-top: 2px;
 }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/responsive\.desktop\.scss}line{font-family:\0000366}}
 #research-link {
   float: left;
   margin-right: 10px;
@@ -54,14 +73,17 @@
   margin-top: 2px;
 }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/responsive\.desktop\.scss}line{font-family:\0000375}}
 #depts-links-top {
   margin: 0;
   float: right;
 }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/responsive\.desktop\.scss}line{font-family:\0000378}}
 #depts-links-top a {
   height: 100%;
   padding: 0 4px;
 }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/responsive\.desktop\.scss}line{font-family:\0000381}}
 #depts-links-top a:hover {
   color: #000;
   background-color: #FFC344;
@@ -72,21 +94,25 @@
   -o-border-radius: 5px;
   border-radius: 5px;
 }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/responsive\.desktop\.scss}line{font-family:\0000388}}
 #depts-links-top li {
   display: inline;
   margin: 0 5px;
   border-left: 1px solid #FFC344;
   padding-left: 10px;
 }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/responsive\.desktop\.scss}line{font-family:\0000393}}
 #depts-links-top li.first {
   border-left: none;
 }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/responsive\.desktop\.scss}line{font-family:\00003100}}
 .flexslider .slides img {
   width: 440px;
   float: left;
 }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/responsive\.desktop\.scss}line{font-family:\00003105}}
 .flexslider ul.slides li img {
   padding-right: 10px;
 }
