--- a/sass/global.pages.scss
+++ b/sass/global.pages.scss
@@ -66,6 +66,7 @@ body {}
   //margin-bottom: 35px;
   //margin-top: 35px;
   padding: 0;
+  width: 100%;
 }
 
 
@@ -84,16 +85,17 @@ body {}
 /*#name-and-slogan {
   float: left;
   margin-top: 3em;
+  width: 100%;
 }*/
 
 
 // Site name (h1)
 #site-name a {
 
-  font-family: steelfish;
+  //font-family: steelfish;
   color: #414042;
   //font-size: 4.583em;
-  font-weight: 400;
+  font-weight: 700;
   letter-spacing: 0;
 
   &:link,
@@ -109,7 +111,10 @@ body {}
 
 
 // Site slogan (h2)
-#site-slogan {}
+#site-slogan {
+  float: right;
+  margin-right: 0.83em;
+}
 
 // Header region (add secondary links)
 .region-header {
