--- a/sass/responsive.desktop.scss
+++ b/sass/responsive.desktop.scss
@@ -21,6 +21,7 @@
   float: left;
   margin-bottom: 10px;
   margin-top: 30px;
+  width:100%;
 }
 
 #main-content {
@@ -33,12 +34,24 @@
   clear: both;
   overflow: auto;
   width: 100%;
-    a {
-      color: #FFC344;
-      font-size: 0.8em;
-      font-weight: bold;
-      vertical-align: middle;
+  a {
+    color: #F1F1F1;
+    font-size: 0.8em;
+    font-weight: bold;
+    vertical-align: middle;
+
+    &:hover,
+    &:focus {
+      color:#FFF;
     }
+  }
+
+  li {
+    border-right: 1px solid #FFF;
+  }
+  li.last{
+    border-right: none;
+  }
   #current-department-link {
     float: left;
     background-color: #FFC344;
