Changed footer styles

--- a/sass/global.pages.scss
+++ b/sass/global.pages.scss
@@ -338,14 +338,14 @@ div.messages,
 }
 
 #footer-panels-wrapper {
-  background-color: #3B3B3C;
+  background-color: #E5E5E5;
   margin-bottom: 0;
-  color: #fff;
+  color: #150517;
   padding: 25px 0 10px;
   div.block-content.content {
-    margin-left: 120px;
+    margin-left: 0px;
     a {
-      color: #fff;
+      color: #086782;
       &:hover {
         text-decoration: underline;
       }
