--- a/css/fo.css
+++ b/css/fo.css
@@ -11,3 +11,8 @@
 #content {
   color: #150517;
 }
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/fo\.scss}line{font-family:\0000312}}
+.at-panel .region.region-three-33-third {
+  float: right;
+}
