--- a/css/global.pages.css
+++ b/css/global.pages.css
@@ -139,18 +139,18 @@ div.messages,
 
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/global\.pages\.scss}line{font-family:\00003340}}
 #footer-panels-wrapper {
-  background-color: #3B3B3C;
+  background-color: #E5E5E5;
   margin-bottom: 0;
-  color: #fff;
+  color: #150517;
   padding: 25px 0 10px;
 }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/global\.pages\.scss}line{font-family:\00003345}}
 #footer-panels-wrapper div.block-content.content {
-  margin-left: 120px;
+  margin-left: 0px;
 }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/global\.pages\.scss}line{font-family:\00003347}}
 #footer-panels-wrapper div.block-content.content a {
-  color: #fff;
+  color: #086782;
 }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/global\.pages\.scss}line{font-family:\00003349}}
 #footer-panels-wrapper div.block-content.content a:hover {
