--- a/sass/global.blocks.scss
+++ b/sass/global.blocks.scss
@@ -134,7 +134,7 @@
   }
   li {
     border-bottom: 1px solid #FFC344;
-    padding: 10px;
+    padding: 10px 10px 10px 0;
     position: relative;
     &:after {
       content: ' ';
@@ -148,6 +148,7 @@
     li {
       border-bottom: none;
       padding: 2px;
+      margin-left: 0px;
       &:after {
         display: none;
       }
