--- a/sass/global.pages.scss
+++ b/sass/global.pages.scss
@@ -114,6 +114,7 @@ body {}
 #site-slogan {
   float: right;
   margin-right: 0.83em;
+  margin-top: 0.6em;
 }
 
 // Header region (add secondary links)
