--- a/css/global.blocks.css
+++ b/css/global.blocks.css
@@ -1,28 +1,35 @@
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/global\.blocks\.scss}line{font-family:\0000311}}
 .block {
   margin-bottom: 20px;
 }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/global\.blocks\.scss}line{font-family:\0000313}}
 .region-header .block {
   margin-top: 20px;
 }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/global\.blocks\.scss}line{font-family:\0000351}}
 .block-content ul,
 .block-content ol {
   margin: 0 0 0 15px;
   padding: 0;
 }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/global\.blocks\.scss}line{font-family:\0000355}}
 .block-content li {
   margin: 0;
   padding: 0;
 }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/global\.blocks\.scss}line{font-family:\00003132}}
 #block-system-main-menu a {
   color: #000 !important;
 }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/global\.blocks\.scss}line{font-family:\00003135}}
 #block-system-main-menu li {
   border-bottom: 1px solid #FFC344;
   padding: 10px;
   position: relative;
 }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/global\.blocks\.scss}line{font-family:\00003139}}
 #block-system-main-menu li:after {
   content: ' ';
   background: #FFC344;
@@ -32,13 +39,16 @@
   bottom: -3px;
   right: 0;
 }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/global\.blocks\.scss}line{font-family:\00003148}}
 #block-system-main-menu li li {
   border-bottom: none;
   padding: 2px;
 }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/global\.blocks\.scss}line{font-family:\00003151}}
 #block-system-main-menu li li:after {
   display: none;
 }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/global\.blocks\.scss}line{font-family:\00003156}}
 #block-system-main-menu .block-inner {
   margin-left: 0;
   margin-right: 20px;
